炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR = -1,   ///<错误类型
	XC_NOTHING = 0,
	XC_WINDOW = 1,    ///<窗口
	XC_MODALWINDOW = 2,    ///<模态窗口
	XC_FRAMEWND = 3,    ///<框架窗口
	XC_FLOATWND = 4,    ///<浮动窗口
	XC_COMBOBOXWINDOW = 11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW = 12,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW = 13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI = 19,   ///<...
	XC_WIDGET_UI = 20,
	//元素
	XC_ELE = 21,   ///<基础元素
	XC_ELE_LAYOUT = 53,   ///<布局元素
	XC_BUTTON = 22,   ///<按钮
	XC_RICHEDIT = 23,   ///<富文本编辑框
	XC_COMBOBOX = 24,   ///<下拉组合框元素
	XC_SCROLLBAR = 25,   ///<滚动条元素
	XC_SCROLLVIEW = 26,   ///<滚动视图元素
	XC_LIST = 27,   ///<列表元素
	XC_LISTBOX = 28,   ///<列表框元素
	XC_LISTVIEW = 29,   ///<列表视图,大图标
	XC_TREE = 30,   ///<树元素
	XC_MENUBAR = 31,   ///<菜单条
	XC_SLIDERBAR = 32,   ///<滑动条
	XC_PROGRESSBAR = 33,   ///<进度条
	XC_TOOLBAR = 34,   ///<工具条
	XC_MONTHCAL = 35,   ///<月历元素
	XC_DATETIME = 36,   ///<时间元素
	XC_PROPERTYGRID = 37,   ///<属性网格
	XC_RICHEDIT_COLOR = 38,   ///<颜色选择元素
	XC_RICHEDIT_SET = 39,   ///<...
	XC_TABBAR = 40,   ///<tab条
	XC_TEXTLINK = 41,   ///<文本链接按钮

	XC_PANE = 42,   ///<布局窗格
	XC_PANE_SPLIT = 43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON = 44,   ///<菜单条上的按钮
							  //	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
							  //	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
							  //	XC_PIER                 =47,   ///<窗格停靠码头
							  //	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
							  //	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
							  XC_RICHEDIT_FILE = 50,   ///<RichEditFile 文件选择编辑框
							  XC_RICHEDIT_FOLDER = 51,   ///<RichEditFolder  文件夹选择编辑框
							  XC_LIST_HEADER = 52,   ///<列表头元素

							  XC_SHAPE = 61,    ///<形状对象
							  XC_SHAPE_TEXT = 62,    ///<形状对象-文本
							  XC_SHAPE_PICTURE = 63,    ///<形状对象-图片
							  XC_SHAPE_RECT = 64,    ///<形状对象-矩形
							  XC_SHAPE_ELLIPSE = 65,    ///<形状对象-圆
							  XC_SHAPE_LINE = 66,    ///<形状对象-直线
							  XC_SHAPE_GROUPBOX = 67,    ///<形状对象-组框
							  XC_SHAPE_GIF = 68,    ///<形状对象-GIF

													//其他类型
													XC_MENU = 81,   ///<弹出菜单
													XC_IMAGE = 82,         ///<图片
													XC_IMAGE_TEXTURE = XC_IMAGE,   ///<图片纹理,图片源,图片素材
													XC_HDRAW = 83,   ///<绘图操作
													XC_FONT = 84,   ///<炫彩字体
													XC_FLASH = 85,   ///<flash   
													XC_PANE_CELL = 86,   ///<...
													XC_WEB = 87,   ///<...
													XC_IMAGE_FRAME = 88,   ///<图片帧,指定图片的渲染属性

													XC_LAYOUT_OBJECT = 101,   ///<布局对象LayoutObject
													XC_ADAPTER = 102,   ///<...
													XC_ADAPTER_TABLE = 103,   ///<数据适配器AdapterTable
													XC_ADAPTER_TREE = 104,   ///<数据适配器AdapterTree
													XC_ADAPTER_LISTVIEW = 105,   ///<数据适配器AdapterListView
													XC_ADAPTER_MAP = 106,   ///<数据适配器AdapterMap

													XC_BKINFOM = 116, //背景管理器

																	  //无实体对象,只是用来判断布局
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,

																	  //无实体对象,只是用来判断类型
																	  XC_LIST_ITEM = 121,     //列表项模板 list_item
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
																	  //XC_BUTTON_EX,
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


struct  RECTF
{
	float  left;
	float  top;
	float  right;
	float  bottom;
};


///@}


//状态--------------------------------------
/// @defgroup groupCommonState3 普通三种状态
/// @ingroup  macroDefine
/// @{
enum  common_state3_
{
	common_state3_leave = 0,  ///<离开
	common_state3_stay,     ///<停留
	common_state3_down,     ///<按下
};


///@}

/// @defgroup groupListItemState List项状态
/// @ingroup macroDefine
/// @{
enum  list_item_state_
{
	list_item_state_leave = 0,   ///<项鼠标离开状态
	list_item_state_stay = 1,    ///<项鼠标停留状态
	list_item_state_select = 2,  ///<项选择状态
};


///@}


/// @defgroup groupTreeItemState Tree项状态
/// @ingroup macroDefine
/// @{
enum  tree_item_state_
{
	tree_item_state_leave = 0,   ///<项鼠标离开状态
	tree_item_state_stay = 1,    ///<项鼠标停留状态
	tree_item_state_select = 2,  ///<项选择状态
};


///@}

/// @defgroup groupLayoutSize 布局大小类型
/// @ingroup macroDefine
/// @{
enum  layout_size_type_
{
	layout_size_type_fixed = 0,   ///<指定大小
	layout_size_type_fill,      ///<fill 填充父
	layout_size_type_auto,      ///<auto 自动大小,根据内容计算大小
	layout_size_type_weight,    ///<weight 比例,按照比例分配剩余空间
	layout_size_type_disable,   ///<disable 不使用
};


///@}

///@defgroup GroupPropertyGrid_item_type    属性网格项类型
///@ingroup  macroDefine
///@{
enum  propertyGrid_item_type_
{
	propertyGrid_item_type_text = 0,      ///<默认,字符串类型
	propertyGrid_item_type_edit,        ///<编辑框
	propertyGrid_item_type_edit_color,  ///<颜色选择元素
	propertyGrid_item_type_edit_file,   ///<文件选择编辑框
	propertyGrid_item_type_edit_set,    ///<设置
	propertyGrid_item_type_comboBox,    ///<组合框
	propertyGrid_item_type_group,       ///<组
	propertyGrid_item_type_panel,       ///<面板
};


///@}

///@defgroup Group_listItemTemp_type_    列表项模板类型
///@ingroup  macroDefine
///@{
enum listItemTemp_type_
{
	listItemTemp_type_tree = 0x01,					  ///<tree
	listItemTemp_type_listBox = 0x02,				  ///<listBox
	listItemTemp_type_list_head = 0x04,				  ///<list 列表头
	listItemTemp_type_list_item = 0x08,				  ///<list 列表项
	listItemTemp_type_listView_group = 0x10,		  ///<listView 列表视组
	listItemTemp_type_listView_item = 0x20,			  ///<listView 列表视项
	listItemTemp_type_list = listItemTemp_type_list_head | listItemTemp_type_list_item,  ///<list (列表头)与(列表项)组合
	listItemTemp_type_listView = listItemTemp_type_listView_group | listItemTemp_type_listView_item, ///<listView (列表视组)与(列表视项)组合
};

																							  /////////////////////////////////////////////////////////
																							  //////////////定义结构体///////////////////////////////////
																							  /////////////////////////////////////////////////////////
struct BorderSize_i  //4条边的大小
{
	int  leftSize;
	int  topSize;
	int  rightSize;
	int  bottomSize;
};

typedef  BorderSize_i  SpaceSize_i, PaddingSize_i, MarginSize_i;


struct  Position_i
{
	int  iRow;
	int  iColumn;
};


struct listBox_item_i
{
	int     index;      ///<项索引
	int     nUserData;  ///<用户绑定数据
	int     nHeight;    ///<项默认高度
	int     nSelHeight; ///<项选中时高度
	list_item_state_  nState;  ///<状态
	RECT    rcItem;     ///<项坐标
	HXCGUI  hLayout;    ///<布局对象
	HTEMP   hTemp;      ///<列表项模板
};


struct listBox_item_info_i
{
	int     nUserData;  //用户绑定数据
	int     nHeight;
	int     nSelHeight;
};


struct  listView_item_id_i
{
	int  iGroup;   ///<组索引
	int  iItem;    ///<项索引
};


struct list_item_i
{
	int     index;
	int     iSubItem;
	int     nUserData;
	list_item_state_  nState;
	RECT    rcItem;
	HXCGUI  hLayout;    ///<布局对象
	HTEMP   hTemp;      ///<列表项模板
};


struct list_header_item_i
{
	int     index;
	int     nUserData;

	BOOL    bSort;  //是否支持排序
	int     nSortType;   //排序方式,0无效,1升序,2降序
	int     iColumnAdapter;  //对应数据适配器中的列索引

	common_state3_  nState;
	RECT      rcItem;
	HXCGUI    hLayout;  ///<布局对象
	HTEMP     hTemp;    ///<列表项模板
};


struct tree_item_i
{
	int     nID;
	int     nDepth;
	int     nHeight;
	int     nSelHeight;
	int     nUserData;
	BOOL    bExpand;
	tree_item_state_  nState;
	RECT    rcItem;
	HXCGUI  hLayout;   ///<布局对象
	HTEMP   hTemp;     ///<列表项模板
};


struct listView_item_i
{
	int     iGroup;            ///<项所述组索引 -1没有组
	int     iItem;             ///<项在数组中位置索引,如果此致为-1,那么为组
	int     nUserData;         ///<用户绑定数据
	list_item_state_  nState;  ///<状态  
	RECT    rcItem;            ///<整个区域,包含边框
	HXCGUI  hLayout;           ///<布局对象
	HTEMP   hTemp;             ///<列表项模板
};


//布局信息
struct layout_info_i
{
	layout_size_type_  widthType;
	layout_size_type_  heightType;
	short  width;    //宽度
	short  height;   //高度
};


struct  menu_popupWnd_i
{
	HWINDOW hWindow;    //窗口句柄
	int     nParentID;  //父项ID
};


///菜单背景自绘结构
struct menu_drawBackground_i
{
	HMENUX  hMenu;      ///<菜单句柄
	HWINDOW hWindow;    ///<当前弹出菜单项的窗口句柄
	int     nParentID;  ///<父项ID
};


///菜单项自绘结构
struct  menu_drawItem_i
{
	HMENUX     hMenu;       ///<菜单句柄
	HWINDOW    hWindow;     ///<当前弹出菜单项的窗口句柄
	int        nID;         ///<ID
	int        nState;	    ///<状态 @ref menu_item_flags_
	RECT       rcItem;      ///<坐标
	HIMAGE     hIcon;       ///<菜单项图标
	const wchar_t    *pText;   ///<文本
};


//树UI元素拖动项
struct tree_drag_item_i
{
	int  nDragItem;  ///< 拖动项ID
	int  nDestItem;  ///< 目标项ID
	int  nType;      ///< 停放相对目标位置,1:停放到目标的上面,2:停放到目标的下面,3:停放到目标的的子项
};


//字体信息
struct  xc_font_info_i
{
	int   nSize;                 ///<字体大小,单位(pt,磅).
	int   nStyle;                ///<字体样式 xc_fontStyle_i
	wchar_t  name[LF_FACESIZE];  ///<字体名称
};


struct propertyGrid_item_i
{
	propertyGrid_item_type_ nType;
	int   nID;
	int   nDepth;
	int   nUserData;     //用户数据
	int   nNameColWidth; //名称列宽带

	RECT  rcItem;
	RECT  rcExpand;
	BOOL  bExpand;  //是否展开
	BOOL  bShow;    //是否可见
};
struct POINTF
{
	float x;
	float y;
};


///@}

///@defgroup  group_monthCal_item_i_    月历元素项数据
///@ingroup   macroDefine
///@{

/// 月历元素项数据
struct monthCal_item_i
{
	int  nDay;     ///< 日期
	int  nType;    ///< 1上月,2当月,3下月
	int  nState;   ///< 组合状态 monthCal_state_flag_
	RECT rcItem;   ///< 项坐标
};

XC_API HELE WINAPI XDateTime_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API void WINAPI XDateTime_SetStyle(HELE hEle, int nStyle);

XC_API int WINAPI XDateTime_GetStyle(HELE hEle);

XC_API void WINAPI XDateTime_GetTime(HELE hEle, int* pnHour, int* pnMinute, int* pnSecond);

XC_API void WINAPI XDateTime_SetTime(HELE hEle, int nHour, int nMinute, int nSecond);

XC_API void WINAPI XDateTime_GetDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API void WINAPI XDateTime_SetDate(HELE hEle, int nYear, int nMonth, int nDay);

XC_API COLORREF WINAPI XDateTime_GetSelBkColor(HELE hEle);

XC_API void WINAPI XDateTime_SetSelBkColor(HELE hEle, COLORREF crSelectBk, BYTE alpha = 255);

XC_API HELE WINAPI XDateTime_GetButton(HELE hEle, int nType);

XC_API HELE WINAPI XMonthCal_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API void WINAPI XMonthCal_SetToday(HELE hEle, int nYear, int nMonth, int nDay);

XC_API void WINAPI XMonthCal_GetToday(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API void WINAPI XMonthCal_SeSelDate(HELE hEle, int nYear, int nMonth, int nDay);

XC_API void WINAPI XMonthCal_GetSelDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API HTEMP WINAPI XTemp_Load(listItemTemp_type_ nType, const wchar_t* pFileName);  //加载模板 返回模板对象

XC_API HTEMP WINAPI XTemp_LoadFromString(listItemTemp_type_ nType, const char* pStringXML);  //加载模板,从内存, 返回模板对象

XC_API BOOL  WINAPI XTemp_Destroy(HTEMP hTemp);

XC_API HTEMP WINAPI XTemp_Create(listItemTemp_type_ nType);

XC_API BOOL  WINAPI XTemp_AddNodeRoot(HTEMP hTemp, void* pNode);

XC_API BOOL  WINAPI XTemp_AddNode(void* pParentNode, void* pNode);

XC_API void* WINAPI XTemp_CreateNode(XC_OBJECT_TYPE nType);

XC_API BOOL  WINAPI XTemp_SetNodeAttribute(void* pNode, const wchar_t* pName, const wchar_t* pAttr);