炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;


/*
 * name    xcgui界面库模块
 * Made    dasemimi
 * time    2017.2.24
 * ver     2.1.2
*/
namespace XCGUI
{
    using System.Text;


    unsafe public delegate int WM_LBUTTONDOWN_CPP(UInt32 nFlags, IntPtr pPt, bool* pbHandled);

    unsafe public delegate int XE_BNCLICK_CPP(bool* pbHandled);
    unsafe public delegate int XE_BNCLICK_CPP1(int hEventEle, bool* pbHandled);
    unsafe public delegate int XE_BNCLICK_CPP2(int hEle, int hEventEle, bool* pbHandled);


    unsafe public delegate int XE_LISTBOX_TEMP_CREATE_END_CPP(ref listBox_item_i listBox_item_i, bool* pbHandled);

    unsafe public delegate int XE_MENU_SELECT_CPP(int nID, bool* pbHandled);


    public struct LOGFONTW
    {
        public int lfHeight;
        public int lfWidth;
        public int lfEscapement;
        public int lfOrientation;
        public int lfWeight;
        public byte lfItalic;
        public byte lfUnderline;
        public byte lfStrikeOut;
        public byte lfCharSet;
        public byte lfOutPrecision;
        public byte lfClipPrecision;
        public byte lfQuality;
        public byte lfPitchAndFamily;
        unsafe public fixed ushort lfFaceName[32];
    }
    public struct LOGFONT
    {
        public int lfHeight;
        public int lfWidth;
        public int lfEscapement;
        public int lfOrientation;
        public int lfWeight;
        public byte lfItalic;
        public byte lfUnderline;
        public byte lfStrikeOut;
        public byte lfCharSet;
        public byte lfOutPrecision;
        public byte lfClipPrecision;
        public byte lfQuality;
        public byte lfPitchAndFamily;
        unsafe public fixed ushort lfFaceName[32];
    }
    public struct RECT
    {
        public int x;
        public int y;
        public int cx;
        public int cy;
    }
    public struct POINT
    {
        public int x;
        public int y;
    }
    public struct SIZE
    {
        public int cx;
        public int cy;
    }
    public struct PaddingSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct SpaceSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct MarginSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct RECTF
    {
        public float left;
        public float top;
        public float right;
        public float bottom;
    }
    public struct BorderSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct Position_i
    {
        public int iRow;
        public int iColumn;
    }
    public struct listBox_item_i
    {
        public int index;
        public int nUserData;
        public int nHeight;
        public int nSelHeight;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        public int pTempInfo;
    }
    public struct listBox_item_info_i
    {
        public int nUserData;
        public int nHeight;
        public int nSelHeight;
    }
    public struct listView_item_id_i
    {
        public int iGroup;
        public int iItem;
    }
    public struct list_item_i
    {
        public int index;
        public int iSubItem;
        public int nUserData;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        public int pTempInfo;
    }
    public struct list_header_item_i
    {
        public int index;
        public int nUserData;
        public bool bSort;
        public int nSortType;
        public int iColumnAdapter;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        public int pTempInfo;
    }
    public struct tree_item_i
    {
        public int nID;
        public int nDepth;
        public int nHeight;
        public int nSelHeight;
        public int nUserData;
        public bool bExpand;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        public int pTempInfo;
    }
    public struct listView_item_i
    {
        public int iGroup;
        public int iItem;
        public int nUserData;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        public int pTempInfo;
    }
    public struct layout_info_i
    {
        public int widthType;
        public int heightType;
        public short width;
        public short height;
    }
    public struct menu_popupWnd_i
    {
        public int hWindow;
        public int nParentID;
    }
    public struct menu_drawBackground_i
    {
        public int hMenu;
        public int hWindow;
        public int nParentID;
    }
    public struct menu_drawItem_i
    {
        public int hMenu;
        public int hWindow;
        public int nID;
        public int nState;
        unsafe public RECT rcItem;
        public int hIcon;
        [MarshalAs(UnmanagedType.LPWStr, SizeConst = 128)]
        public string Text;
    }
    public struct tree_drag_item_i
    {
        public int nDragItem;
        public int nDestItem;
        public int nType;
    }
    public struct xc_font_info_i
    {
        public int nSize;
        public int nStyle;
        unsafe public fixed short aName[32];
    }
    public struct propertyGrid_item_i
    {
        public int nType;
        public int nID;
        public int nDepth;
        public int nUserData;
        public int nNameColWidth;
        unsafe public RECT* rcItem;
        unsafe public RECT* rcExpand;
        public bool bExpand;
        public bool bShow;
    }
    public struct POINTF
    {
        public float x;
        public float y;
    }
    public struct monthCal_item_i
    {
        public int nDay;
        public int nType;
        public int nState;
        unsafe public RECT* rcItem;
    }



    partial class XTemp
    {

        [DllImport("xcgui.dll", EntryPoint = "XTemp_Load", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XTemp_Load(int nType, string pFileName);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_LoadFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XTemp_LoadFromString(int nType, string pStringXML);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XTemp_Destroy(int hTemp);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XTemp_Create(int nType);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_AddNodeRoot", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XTemp_AddNodeRoot(int hTemp, int pNode);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_AddNode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XTemp_AddNode(int pParentNode, int pNode);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_CreateNode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XTemp_CreateNode(int nType);

        [DllImport("xcgui.dll", EntryPoint = "XTemp_SetNodeAttribute", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XTemp_SetNodeAttribute(int pNode, string pName, string pAttr);

    }

    partial class XDateTime
    {
        [DllImport("xcgui.dll", EntryPoint = "XDateTime_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetStyle(int hEle, int nStyle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int GetStyle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetTime(int hEle, int pnHour, int pnMinute, int pnSecond);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetTime(int hEle, int nHour, int nMinute, int nSecond);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetDate(int hEle, int pnYear, int pnMonth, int pnDay);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetDate(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetSelBkColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetSelBkColor(int hEle, int crSelectBk, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetButton(int hEle, int nType);
    }

    partial class XMonthCal
    {
        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_SetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetToday(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetToday(int hEle, int pnYear, int pnMonth, int pnDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_SeSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SeSelDate(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetSelDate(int hEle, int pnYear, int pnMonth, int pnDay);
